--- a/Bea_Green_05_exercises.Rmd
+++ b/Bea_Green_05_exercises.Rmd
@@ -236,16 +236,23 @@ ggmap(mallorca_map) +
   geom_path(data = mallorca_bike_day7, 
              aes(x = lon, y = lat, color = ele),
              size = 2) +
+  geom_point(data = mallorca_bike_day7, 
+             aes(x = lon, y = lat),
+             color = "red", size = 2.5) +
   scale_color_viridis_c(option = "mako") +
   theme_map() +
-  transition_reveal(time) +
-  enter_recolor(color = "red") +
-  labs(title = "Lisa's Mallorca Bike Ride",
+  labs(title = "Lisa's Mallorca Bike Ride with Current Elevation Displayed",
        color = "Elevation",
-       subtitle = "Time: {frame_along}")
+       subtitle = "Time: {frame_along}") +
+  geom_text(data = mallorca_bike_day7 %>% 
+              mutate(ele2= formatC(ele, digits = 2, format = "f")),
+            aes(label = ele2)) +
+  theme(legend.position = "bottom") +
+  transition_reveal(time)
 ```
-RECOLOR NOT WORKING, ADD SOMETHING NEW.
-**Comment**: 
+
+**Comment**: I prefer this moving graph a lot over the static one! It really shows the active nature of the bike ride, and allows the viewer to feel as if they are going along with the route. It is a little harder to look at the route overall, but that could be improved by adding a longer pause at the end of the animation. I also added the current elevation as a geom_text to my plot, which is slightly hard to read but does provide more information for the viewer if they wanted to know a more specific elevation at any one point. 
+
   
   5. In this exercise, you get to meet my sister, Heather! She is a proud Mac grad, currently works as a Data Scientist at 3M where she uses R everyday, and for a few years (while still holding a full-time job) she was a pro triathlete. You are going to map one of her races. The data from each discipline of the Ironman 70.3 Pan Am championships, Panama is in a separate file - `panama_swim`, `panama_bike`, and `panama_run`. Create a similar map to the one you created with my cycling data. You will need to make some small changes: 1. combine the files (HINT: `bind_rows()`, 2. make the leading dot a different color depending on the event (for an extra challenge, make it a different image using `geom_image()!), 3. CHALLENGE (optional): color by speed, which you will need to compute on your own from the data. You can read Heather's race report [here](https://heatherlendway.com/2016/02/10/ironman-70-3-pan-american-championships-panama-race-report/). She is also in the Macalester Athletics [Hall of Fame](https://athletics.macalester.edu/honors/hall-of-fame/heather-lendway/184) and still has records at the pool. 
   
@@ -265,14 +272,14 @@ ggmap(panama_map) +
   geom_path(data = panama_all, 
              aes(x = lon, y = lat, color = ele),
              size = 1) +
-  scale_color_viridis_c(option = "mako") +
+  scale_color_viridis_c(option = "inferno") +
   theme_map() +
-  transition_reveal(time) +
   labs(title = "Panama Triathalon",
        color = "Elevation",
-       subtitle = "Time: {frame_along}")
+       subtitle = "Time: {frame_along}") +
+  transition_reveal(time)
 ```
-
+LINE JUMPING--WRONG TIMES SHOWING UP. SOMETHING IS WRONG. RECOLOR ENTRY BY EVENT.
   
 ## COVID-19 data
 
@@ -283,6 +290,18 @@ ggmap(panama_map) +
   * Animate the plot to reveal the pattern by date. Display the date as the subtitle. Add a leading point to each state's line (`geom_point()`) and add the state name as a label (`geom_text()` - you should look at the `check_overlap` argument).  
   * Use the `animate()` function to have 200 frames in your animation and make it 30 seconds long. 
   * Comment on what you observe.
+  
+```{r}
+covid19 %>% 
+  group_by(state) %>%
+  mutate(seven_day_lag = lag(cases, n=7), week_cases = cases-seven_day_lag) %>% 
+  replace_na(list(seven_day_lag = 0, week_cases = 0)) %>% 
+  filter(cases>20) %>% 
+  ggplot(aes(x = cases, y = week_cases, group = state)) +
+  geom_path() 
+  
+```
+
   
   7. In this exercise you will animate a map of the US, showing how cumulative COVID-19 cases per 10,000 residents has changed over time. This is similar to exercises 11 & 12 from the previous exercises, with the added animation! So, in the end, you should have something like the static map you made there, but animated over all the days. The code below gives the population estimates for each state and loads the `states_map` data. Here is a list of details you should include in the plot:
   
